Change calcScores: normalize equivalent values to 0 when only for zeroes, use -1 and +1 otherwise; move JSONSon to public package; use unpkg.com to load a package in browser

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </form>
 <script type="module">
 
-import JSONSon from './src/utils/JSONSon.js';
+import JSONSon from 'https://unpkg.com/jsonson@latest/index.js';
 import { HttpApiClientJSONSon } from './src/utils/ApiClientJSONSon.js';
 
 import models from './src/models.js';
